--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "musicbrainz-db/musicbrainz-server"]
-	path = musicbrainz-db/musicbrainz-server
-	url = https://github.com/metabrainz/musicbrainz-server.git
+[submodule "musicbrainz-db/mbdata"]
+	path = musicbrainz-db/mbdata
+	url = https://github.com/acoustid/mbdata.git
