--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -8,3 +8,7 @@ services:
       POSTGRES_PASSWORD: musicbrainz
     ports:
       - "15432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
